# unitree-h1-ros-sdk

./: .gitignore  README.md  ros2_launch.sh
src/h1_control/: CMakeLists.txt  package.xml
src/h1_control/config/: control_params.yaml
src/h1_control/h1_control/: __init__.py
src/h1_control/launch/: h1_control.launch.py  joystick_teleop.launch.py  keyboard_teleop.launch.py  simulation_control.launch.py
src/h1_control/scripts/: gazebo_sim_controller.py  high_level_control.py  joystick_teleop.py  keyboard_teleop.py  velocity_controller.py
src/h1_gazebo/: CMakeLists.txt  package.xml
src/h1_gazebo/config/: bridge_config.yaml  h1_controllers.yaml  h1_display.rviz
src/h1_gazebo/launch/: h1_gazebo.launch.py  h1_rviz.launch.py
src/h1_gazebo/urdf/: h1_gazebo.urdf.xacro
src/h1_gazebo/worlds/: h1_world.sdf
src/robots/h1_description/: CMakeLists.txt  package.xml
src/robots/h1_description/launch/: h1_display.launch.py
src/robots/h1_description/rviz/: h1_display.rviz
src/robots/h1_description/urdf/: h1.urdf
