<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h1_description</name>
  <version>2.0.0</version>
  <description>The Unitree H1 Humanoid Robot Description Package for ROS 2</description>
  
  <maintainer email="maintainer@example.com">Unitree H1 ROS SDK Maintainer</maintainer>
  <license>BSD-3-Clause</license>
  
  <url type="repository">https://github.com/unitreerobotics/unitree_ros</url>
  <url type="website">https://www.unitree.com/</url>
  
  <author>Unitree Robotics</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>